# sts-audit

./: LICENSE  PROPOSAL.md  README.md  analyze_results.py  example.sts.toml  generate_figures.py  pyproject.toml  run_cross_model_experiment.py  sts_checker.py
cases/01_bookstore_system/: H_v1_mono.py  H_v2_mono.py  Z_v1_mono.py  Z_v2_mono.py
cases/01_bookstore_system/Z_v2_split/: service.py  views.py
cases/02_mall_settlement/: H_mono.py
cases/02_mall_settlement/Z_split/: service.py  views.py
cases/03_inventory_system/: H_mono.py
cases/03_inventory_system/Z_split/: service.py  views.py
docker/blind-reviewer/: Dockerfile  review.py  review.sh
docker/blind-reviewer/specs/: reviewer.md
docs/: SAMA-Arch_v2.2.md  STS_Standard_v1.0.md
evidence/: agentic_quality_gap.md  claude_confession.md  greedy_case_study.md  metrics_baseline_v2.0.csv
framework/: README.md  agent_specs.md  audit_method.md  autonomous_prompt_template.md  brainstorm.md  claude_quality_gates.md  experiment_design.md  formalization_draft.md  git_specialist_spec.md  infra_conventions.md  project_architecture.md
framework/experiments/: exp1_gate_effectiveness.md  exp5_paper_scoring.md  exp6_version_trajectory.md  exp7_autonomous_convergence.md  exp_cross_model_design.md
prompts/: case01_bookstore.md  case02_mall.md
prompts/zh-CN/: case01_bookstore.md  case02_mall.md
