[project]
name = "sts-project-2026"
version = "0.1.0"
description = "Quantifying Architectural Stress in the AI Era"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.83.0",
    "google-genai>=1.64.0",
    "openai>=2.23.0",
    "radon>=5.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
